# ashare-research-platform

./: .env.example  .gitignore  AGENTS.md  README.md  SKILL.md  pyproject.toml
codex/: README.md  capability-map.md  data-access-guide.md  data-map.md  reasoning-policy.md  source-registry.md
codex/playbooks/: industry-chain-research.md  market-structure.md  stock-research.md
config/: feature_scoring.default.json
docs/: README.md  refactor-architecture.md
docs/agent-workflows/: agent-selection-and-industry-chain-positioning.md
docs/architecture/: analysis-capability-catalog.md  analysis-data-catalog.md
docs/operations/: maintenance-dataset-catalog.md
docs/playbooks/: industry-chain-selection-playbook.md
docs/refactor/: codex-first-rearchitecture.md  skill-first-rearchitecture.md
prompts/: industry-chain-selection-prompt.md  industry-evidence-prompt.md  prism-research-framework-prompt.md
references/: analysis-capability-catalog.md  data-access-guide.md  data-interfaces.md  data-map.md  dataset-index.md  industry-evidence-design.md  industry-source-maps.json  industry-source-registry.json  maintenance-dataset-catalog.md  reasoning-policy.md  refactor-plan.md  source-expansion-notes.md  source-registry.md
references/playbooks/: industry-chain-research.md  market-structure.md  stock-research.md
references/prompts/: industry-chain-trend.md
scripts/: ashare_call.py  fetch_api_schemas.py  fetch_permission_requirements.py  generate_interfaces.py  merge_permission_requirements.py  smoke_all_interfaces.py  tushare_call.py
src/ashare_data_provider/: __init__.py  cli.py  config.py  defaults.py  events.py  interfaces.json  issues.py  output.py  params.py  provider.py  recipes.json  recipes.py  registry.py  schemas.py
tests/: test_api_schemas.py  test_capabilities.py  test_cli.py  test_cli_events.py  test_client.py  test_config.py  test_connectors.py  test_context_packs.py  test_daily.py  test_data_build.py  test_dataset_catalog.py  test_defaults_and_issues.py  test_events.py  test_evidence.py  test_features.py  test_knowledge.py  test_mart_reader.py  test_news.py  test_params.py  test_protocols.py  test_provider.py  test_recipes.py  test_registry.py  test_research_data_foundation.py  test_runs.py  test_smoke_script.py
(+154 files in other folders)
