[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ashare-research-platform"
version = "0.1.0"
description = "A-share research data platform for reproducible Codex workflows."
readme = "README.md"
requires-python = ">=3.14"
authors = [
  { name = "Codex" }
]
dependencies = [
  "akshare>=1.18.0",
  "pandas>=2.3.0",
  "pyarrow>=16.0.0",
  "tushare>=1.4.21"
]

[dependency-groups]
dev = [
  "pytest>=8.0"
]

[project.scripts]
ashare = "ashare_research.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ashare_research*"]

[tool.setuptools.package-data]
"ashare_research.capabilities" = ["specs/*.json"]
"ashare_research.protocols" = ["specs/*.json", "output_schemas/*.json"]
