[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ashare-data-provider"
version = "0.1.0"
description = "A-share first research data foundation for LLM research skills."
readme = "README.md"
requires-python = ">=3.14"
authors = [
  { name = "ashare-data-provider maintainers" }
]
dependencies = [
  "akshare>=1.18.0",
  "pandas>=2.3.0",
  "pyarrow>=16.0.0",
  "pypdf>=5.0.0",
  "tushare>=1.4.21",
]

[dependency-groups]
dev = [
  "pytest>=8.0"
]

[project.scripts]
rdf = "research_data_foundation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["research_data_foundation*"]
